# nautilus-hide

./: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  NEWS  README.md  README.mkd  generate-pot-file.sh  nautilus-hide.appdata.xml
cmake/: FindXdotool.cmake
extension/: nautilus-hide.py
po/: de.po  es.po  fr.po  nautilus-hide.pot  pt.po  sk.po
